# spl-toolkit

./: .gitignore  Dockerfile  Dockerfile.server  LICENSE  Makefile  README.md  go.mod
.github/workflows/: ci.yml  docs.yml
cmd/: main.go
cmd/server/: main.go
docs/: CNAME  _config.yml  api-server.md  architecture.md  configuration.md  contributing.md  docs.go  index.md  installation.md  quickstart.md
docs/_includes/: nav.html
docs/api/: go.md  index.md
grammar/: SPLLexer.g4  SPLParser.g4
parser/: SPLLexer.interp  SPLParser.interp  SPLParser.tokens  spl_lexer.go  spl_parser.go  splparser_base_listener.go  splparser_base_visitor.go  splparser_listener.go  splparser_visitor.go
pkg/api/: concurrency_test.go  handlers.go  models.go  server.go  server_test.go
pkg/bindings/: bindings.go
pkg/mapper/: discovery_listener.go  field_mapping_listener.go  mapper.go  mapper_test.go  parser.go  parser_test.go  schema.go  schema_test.go
python/: pyproject.toml  requirements-dev.txt  setup.py
python/examples/: basic_usage.py
python/spl_toolkit/: __init__.py  exceptions.py  libspl_toolkit.h  mapper.py
python/tests/: test_mapper.py
